Testing microsoft-identity domain verifcation

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,16 @@
   <hr />
   <p class="lead">
     This is a simple Node.js web app using the Express framework and EJS templates. It has been designed with cloud
-    demos & containers in mind, to demonstrate capabilities such as auto scaling in Azure and Application Insights
-    monitoring.<br />
+    demos & containers in mind. Demonstrating capabilities such as auto scaling, deployment to Azure or Kubernetes, or anytime you want 
+    something quick and lightweight to run & deploy.<br />Some features:
+    <ul>
+        <li>System status / information view</li>
+        <li>App Insights support</li>
+        <li>Geolocated weather info (from DarkSky API)</li>
+        <li>Tools for triggering errors and high CPU load</li>
+        <li>Mini todo app using MongoDB data store</li>
+        <li>Support for user authentication with Azure AD</li>
+      </ul>
   </p>
   <br />
 
