Minor tweak to home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   <p class="lead">
     This is a simple Node.js web app using the Express framework and EJS templates. It has been designed with cloud
     demos & containers in mind. Demonstrating capabilities such as auto scaling, deployment to Azure or Kubernetes, or anytime you want 
-    something quick and lightweight to run & deploy.<br />Some features:
+    something quick and lightweight to run & deploy 😄<br/><br/>Basic features:
     <ul>
         <li>System status / information view</li>
         <li>App Insights support</li>
