--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,21 +20,21 @@
 
   <p>
     <img src='images/octocat.png' width='58px' /> &nbsp;
-    <a target='_blank' href='https://github.com/benc-uk/nodejs-demoapp' class="btn btn-info btn-lg">Project Source on
+    <a target='_blank' href='https://github.com/benc-uk/nodejs-demoapp' class="btn btn-info btn-lg">Project on
       Github</a>
-  </p>
-  <p>
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
     <img src='images/docker.png' width='58px' /> &nbsp;
     <a target='_blank' href='https://hub.docker.com/r/bencuk/nodejs-demoapp' class="btn btn-info btn-lg">Docker images
       on Dockerhub</a>
   </p>
+
 
   <hr style="background-color: #777" />
 
   <p>
     <img src='images/get-started.svg' width='58px' /> &nbsp;
     <a target='_blank' href='https://docs.microsoft.com/en-gb/javascript/azure/?view=azure-node-latest'
-      class="btn btn-info btn-lg">Get started with Azure &amp; Node.js</a>
+      class="btn btn-success btn-lg">Get started with Azure &amp; Node.js</a>
   </p>
 
 
