Moved to yarn and added OS uptme

--- a/views/info.ejs
+++ b/views/info.ejs
@@ -31,6 +31,7 @@
       </tr>  
 
       <tr> <td><i class="fa fa-home"></i></td><td> Hostname</td> <td><%= info.hostname %></td> </tr>
+      <tr> <td><i class="fa fa-clock"></i></td><td> System Uptime</td> <td><%= info.uptime %></td> </tr>
       <tr> <td><i class="fa fa-laptop"></i></td><td>  OS Type</td> <td><%= info.type %></td> </tr>
       <tr> <td><i class="fas fa-cogs"></i></td><td>  OS Version</td> <td><%= info.release %></td> </tr>
       <tr> <td><i class="fa fa-wrench"></i></td><td>  Architecture</td> <td><%= info.arch %></td> </tr>
