--- a/src/views/info.ejs
+++ b/src/views/info.ejs
@@ -10,9 +10,9 @@
         <td><i class="fa fa-cube"></i></td>
         <td> Containerized</td>
         <% if (isDocker) { %>
-        <td>Looks like we're running in a Docker container! &#x1F604; </td>
+        <td>Looks like we're running in a Docker container! 😁 </td>
         <% } else { %>
-        <td>Not running as a Docker container &#x1F622; </td>
+        <td>Not running as a Docker container 😢 </td>
         <% } %>
       </tr>
 
@@ -20,9 +20,9 @@
         <td><i class="fa fa-project-diagram"></i></td>
         <td> Kubernetes</td>
         <% if (isKube) { %>
-        <td>We're also running in a Kubernetes pod! &#x1f44d; </td>
+        <td>We're also running in a Kubernetes pod! 😃 </td>
         <% } else { %>
-        <td>Not running in Kubernetes &#x1F622; </td>
+        <td>Not running in Kubernetes 😢 </td>
         <% } %>
       </tr>
 
@@ -59,7 +59,7 @@
       <tr>
         <td><i class="fa fa-microchip"></i></td>
         <td> Processors</td>
-        <td><%= info.cpus.length%> &times; <%=info.cpus[0].model %></td>
+        <td><%= info.cpus.length%> &times; <%= info.cpus[0].model %></td>
       </tr>
       <tr>
         <td><i class="fas fa-memory"></i></td>
@@ -71,13 +71,6 @@
         <td> Node Version</td>
         <td><%= info.nodever %></td>
       </tr>
-      <% if (process.env.FRAMEWORK_VERSION) { %>
-      <tr>
-        <td><i class="fa fa-cloud"></i></td>
-        <td> Azure Framework</td>
-        <td><%= process.env.FRAMEWORK_VERSION %></td>
-      </tr>
-      <% } %>
     </table>
 
   </div>
@@ -91,15 +84,16 @@
 
     <div class="envtable">
       <table class="table table-hover">
-        <% for(let p in process.env) { %>
-        <% if (p.toUpperCase().includes('SECRET')) continue %>
-        <% if (p.toUpperCase().includes('PWD')) continue %>
-        <% if (p.toUpperCase().includes('PASSWORD')) continue %>
-        <% if (p.toUpperCase().includes('KEY')) continue %>
-        <% if (p.toUpperCase().includes('PATH')) continue %>
+        <% for(let envVar in process.env) { %>
+        <% if (envVar.toUpperCase().includes('SECRET')) continue %>
+        <% if (envVar.toUpperCase().includes('PWD')) continue %>
+        <% if (envVar.toUpperCase().includes('PASSWORD')) continue %>
+        <% if (envVar.toUpperCase().includes('KEY')) continue %>
+        <% if (envVar.toUpperCase().includes('PATH')) continue %>
+        <% if (envVar.toUpperCase().includes('NPM_')) continue %>
         <tr>
-          <td> <%= p %> </td>
-          <td class="envvars"><%= process.env[p] %></td>
+          <td> <%= envVar %> </td>
+          <td class="envvars"><%= process.env[envVar] %></td>
         </tr>
         <% } %>
       </table>
