--- a/src/views/_head.ejs
+++ b/src/views/_head.ejs
@@ -80,14 +80,14 @@
       <%if (process.env.AAD_APP_ID && process.env.AAD_APP_SECRET) { %>
       <ul class="navbar-nav ml-auto">
         &nbsp;
-        <%if (!user) { %>
+        <%if (typeof user === 'undefined') { %>
         <li class="nav-item active">
           <a class="btn btn-info btn-lg" href="/login"><i class="fas fa-user"></i>&nbsp; Login</a>
         </li>
         <% } else { %>
         <li class="nav-item active">
           <a class="btn btn-success btn-lg" href="/account"><i class="fas fa-user-circle"></i>&nbsp;
-            <%= user.displayName %></a>
+            <%= user.account.name %></a>
         </li>
         <% } %>
       </ul>
