--- a/src/views/_head.ejs
+++ b/src/views/_head.ejs
@@ -77,17 +77,17 @@
         </li>
         <% } %>
       </ul>
-      <%if (process.env.AAD_APP_ID) { %>
+      <%if (process.env.AAD_APP_ID && process.env.AAD_APP_SECRET) { %>
       <ul class="navbar-nav ml-auto">
         &nbsp;
-        <%if (!user) { %>
+        <%if (typeof user === 'undefined') { %>
         <li class="nav-item active">
           <a class="btn btn-info btn-lg" href="/login"><i class="fas fa-user"></i>&nbsp; Login</a>
         </li>
         <% } else { %>
         <li class="nav-item active">
           <a class="btn btn-success btn-lg" href="/account"><i class="fas fa-user-circle"></i>&nbsp;
-            <%= user.displayName %></a>
+            <%= user.account.name %></a>
         </li>
         <% } %>
       </ul>
@@ -95,7 +95,14 @@
     </div>
   </nav>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 
   <div class="container body-content">
